Call GetShockerInfo API endpoint on initialization